--- a/tests/cases/testcase10.in
+++ b/tests/cases/testcase10.in
@@ -1,1 +1,1 @@
-./scheduler -f rr_memoryoverlap.txt -a rr -s 40  -m p -q 10
+./scheduler -f tests/scenarios/rr_memoryoverlap.txt -a rr -s 40  -m p -q 10
