--- a/tests/cases/testcase11.in
+++ b/tests/cases/testcase11.in
@@ -1,1 +1,1 @@
-./scheduler -f rr_memoryoverlap.txt -a rr -s 40 -m v -q 10
+./scheduler -f tests/scenarios/rr_memoryoverlap.txt -a rr -s 40 -m v -q 10
