--- a/tests/cases/testcase4.in
+++ b/tests/cases/testcase4.in
@@ -1,1 +1,1 @@
-./scheduler -f rr_memoryoverlap.txt -a rr -s 20 -m p -q 10
+./scheduler -f tests/scenarios/rr_memoryoverlap.txt -a rr -s 20 -m p -q 10
